--- a/squid.conf
+++ b/squid.conf
@@ -715,7 +715,7 @@ acl Safe_ports port 488 # gss-http
 acl Safe_ports port 591 # filemaker
 acl Safe_ports port 777 # multiling http
 acl CONNECT method CONNECT
-acl VIPERVPS dst 49.213.25.133-49.213.25.133/255.255.255.255
+acl VPS dst [ipserver]-[ipserver]/255.255.255.255
 
 #  TAG: follow_x_forwarded_for
 #	Allowing or Denying the X-Forwarded-For header to be followed to
@@ -817,7 +817,7 @@ acl VIPERVPS dst 49.213.25.133-49.213.25.133/255.255.255.255
 # Recommended minimum Access Permission configuration:
 #
 # Only allow cachemgr access from localhost
-http_access allow VIPERVPS
+http_access allow VPS
 http_access allow manager localhost
 
 # Deny requests to certain unsafe ports
