--- a/squid.conf
+++ b/squid.conf
@@ -715,7 +715,7 @@ acl Safe_ports port 488 # gss-http
 acl Safe_ports port 591 # filemaker
 acl Safe_ports port 777 # multiling http
 acl CONNECT method CONNECT
-acl VPS dst [ipserver]-[ipserver]/255.255.255.255
+acl VPS dst ipserver-ipserver/255.255.255.255
 
 #  TAG: follow_x_forwarded_for
 #	Allowing or Denying the X-Forwarded-For header to be followed to
