--- a/squid.conf
+++ b/squid.conf
@@ -817,6 +817,8 @@ acl VPS dst ipserver-ipserver/255.255.255.255
 # Recommended minimum Access Permission configuration:
 #
 # Only allow cachemgr access from localhost
+
+http_access allow SSH
 http_access allow VPS
 http_access allow manager localhost
 
@@ -3742,8 +3744,9 @@ cache_effective_user proxy
 #	will be used. If you have multiple caches in a cluster and
 #	get errors about IP-forwarding you must set them to have individual
 #	names with this setting.
-#Default:
-# visible_hostname localhost
+#Default
+
+visible_hostname VisheraCatalyst
 
 #  TAG: unique_hostname
 #	If you want to have multiple machines with the same
