--- a/MusicBot/permissions.ini
+++ b/MusicBot/permissions.ini
@@ -1,5 +1,5 @@
 [Default]
-CommandWhitelist = play perms queue np skip search id help clean summon
+CommandWhitelist = play perms queue np skip search id help clean summon restart disconnect
 IgnoreNonVoice = play skip search
 MaxSongLength = 9999
 MaxSongs = 9999
@@ -7,8 +7,8 @@ AllowPlaylists = yes
 InstaSkip = no
 
 [MusicMaster]
-GrantToRoles = 138627141855215616
-UserList = 148297948604792832 
+GrantToRoles = 148297948604792832
+;UserList =  
 MaxSongLength = 9999
 MaxSongs = 9999
 MaxPlaylistLength = 9999
