--- a/MusicBot/options.ini
+++ b/MusicBot/options.ini
@@ -3,12 +3,12 @@ Email = bot.tunngleidndiscord@yahoo.com
 Password = jenitri123
 
 [Permissions]
-OwnerID = 122685813916958721
+OwnerID = 148297948604792832
 
 [Chat]
-CommandPrefix = !
-BindToChannels = 168055977755541504
-AutojoinChannels = 168028071121780736
+CommandPrefix = &
+;BindToChannels = 168055977755541504
+;AutojoinChannels = 168028071121780736
 
 [MusicBot]
 DefaultVolume = 0.25
