--- a/MusicBot/options.ini
+++ b/MusicBot/options.ini
@@ -27,4 +27,5 @@ DebugMode = no
 ;Tunggle IDN Indonesia 
 ;DigitalOcean SG Server
 ;Setup by Mark.IV @Staff
-;MusicBot review-branch 1.9.5
+;MusicBot master-branch 1.9.5 SexualRhinoceros
+;17 july 2016
