--- a/MusicBot/permissions.ini
+++ b/MusicBot/permissions.ini
@@ -36,4 +36,5 @@ InstaSkip = no
 ;Tunggle IDN Indonesia 
 ;DigitalOcean SG Server
 ;Setup by Mark.IV @Staff
-;MusicBot review-branch 1.9.5
+;MusicBot master-branch 1.9.5
+;17 July 2016
